2000-06-15  Dan Winship  <danw@helixcode.com>

	* folder-browser.c (folder_browser_clear_search): New function to
	revert back to non-searching mode.

	* mail-ops.c (fetch_mail): Use folder_browser_clear_search.

	* mail-display.c (on_url_requested): if the document requests an
	unknown URL, it's not an error; just ignore the URL.

	* mail-ops.c (fetch_mail): If there's no new mail, tell the user.

2000-06-14  Radek Doulik  <rodo@helixcode.com>

	* main.c (main): call gtkhtmllib_init here

2000-06-13  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (on_SourceConfigDialogButton_clicked): Make sure source
	is always pointing to something, so a blank is not written to the config file
	on close.

2000-06-13  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (SHELL_OBJS): Removed.
	(evolution_mail_LDADD): Use `libeshell.a'.  Also use
	`top_builddir' consistently.

2000-06-12  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c: Got rid of sources_max_row and identities_max_row
	as they are not really needed (just use clist->rows)
	(on_cmdSourcesEdit_clicked): Modified to make 'source'
	point to the data being edited.
	(on_cmdSourcesAdd_clicked): Adds a new clist item and selects it so the
	editor knows where to stick the data when it's done.

2000-06-12  Federico Mena Quintero  <federico@helixcode.com>

	* message-list.c: Removed the ETableModel thaw handler.

2000-06-12  Dan Winship  <danw@helixcode.com>

	* folder-browser.c (folder_browser_set_uri): Return the result of
	folder_browser_load_folder.
	(get_prop, set_prop, folder_browser_properties_init): Remove. No
	longer needed.

	* folder-browser-factory.c (folder_browser_factory_new_control):
	Add a "uri" argument, return NULL if setting it fails.
	(folder_browser_factory_new_control): Remove property bag stuff.
	(folder_browser_factory_init, folder_browser_factory): Remove
	this, since we're using the component factory now.

	* component-factory.c (create_view): Update for