@@ -1,5 +1,10 @@
 2000-06-15  Dan Winship  <danw@helixcode.com>
 
+	* mail-ops.c (fetch_mail): 
+	* component-factory.c (owner_unset_cb): 
+	* message-list.c (message_list_set_folder): Update for CamelFolder
+	changes.
+
 	* folder-browser.c (folder_browser_clear_search): New function to
 	revert back to non-searching mode.
 
